--- a/src/pages/generate/[category]/[generator]/index.astro
+++ b/src/pages/generate/[category]/[generator]/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "src/layouts/page.astro";
 import { marked } from "marked";
+import GeneratorOutput from "src/components/generator-output.astro";
 
 const { category, generator } = Astro.params;
 
@@ -10,11 +11,12 @@ const res = await fetch(
   Astro.url.origin +
     `/generate/${category}/${generator}.json?n=${searchParams.get("n") ?? 1}`
 ).then((x) => x.json());
+console.log(res);
 ---
 
 <Layout title={"Generate " + res.generator}>
   <hgroup>
-    <h1>{res.generator}</h1>
+    <h1>Generate {res.generator}</h1>
     <nav aria-label="breadcrumbs">
       <ol>
         <li><a href="/generate">generate</a></li>
@@ -23,18 +25,5 @@ const res = await fetch(
       </ol>
     </nav>
   </hgroup>
-  <dl>
-    {
-      res.results.map((result: { [key: string]: string }) =>
-        Object.entries(result).map(([key, value]) => (
-          <>
-            <dt>{key}</dt>
-            <dd>
-              <Fragment set:html={marked(value)} />
-            </dd>
-          </>
-        ))
-      )
-    }
-  </dl>
+  <GeneratorOutput results={res.results} />
 </Layout>
