--- a/src/layouts/page.astro
+++ b/src/layouts/page.astro
@@ -1,11 +1,11 @@
 ---
+import "../app.css";
 import { getCollection } from "astro:content";
 import { groupBy } from "lodash";
 
 const { title } = Astro.props;
 const generators = await getCollection("generators");
 const categories = groupBy(generators, ({ id }) => id.split("/")[0]);
-
 ---
 
 <html lang="en">
@@ -20,125 +20,40 @@ const categories = groupBy(generators, ({ id }) => id.split("/")[0]);
       href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
       rel="stylesheet"
     />
-    <style is:global>
-      * {
-        box-sizing: border-box;
-      }
-
-      dt {
-        padding: 0.2em 0.5em;
-        background: black;
-        color: white;
-      }
-
-      [aria-label="breadcrumbs"] ol {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-      }
-
-      [aria-label="breadcrumbs"] li:not(:last-child)::after {
-        content: ">";
-        margin: 0 0.2em;
-      }
-
-      body[data-theme="typewriter"] {
-        font-family: "Special Elite", cursive;
-        font-size: 12px;
-      }
-
-      body[data-theme="console"] {
-        font-family: monospace;
-      }
-
-      body > footer {
-        position: fixed;
-        bottom: 0;
-        padding: 0.5rem;
-        width: calc(100% - 1.5rem);
-        display: flex;
-        justify-content: flex-end;
-      }
-
+    <style>
       body {
-        position: relative;
-        display: grid;
-        grid-template-areas: "sidenav main";
-        grid-template-columns: 1fr 3fr;
-        margin: 0;
+        display: flex;
+        flex-direction: row-reverse;
         gap: 1rem;
-        height: 100vh;
-      }
-
-      aside {
-        height: 100%;
-        grid-area: sidenav;
         padding: 1rem;
-        background-color: #f0f0f0;
-        overflow-y: scroll;
       }
 
-      footer {
-        position: absolute;
-        bottom: 0;
+      @media screen and (max-width: 800px) {
+        body {
+          display: block;
+        }
+        main {
+          flex: 1 1 auto;
+        }
       }
 
-      hgroup > :not(:first-child) {
-        margin-top: 0;
-      }
-      hgroup > :not(:last-child) {
-        margin-bottom: 0;
-      }
-
-      table {
-        border: 1px solid currentColor;
-        border-collapse: collapse;
-        position: relative;
-        margin-left: 2em;
-      }
-
-      th, td {
-        border: 1px solid black;
-        padding: .2em;
-      }
-
-      th {
-        background: black;
-        color: white;
-        text-align: right;
-      }
-
-      td > p {
-        margin: 0;
-      }
-
-
-      caption {
-        position: absolute;
-        writing-mode: vertical-rl;
-        text-orientation: mixed;
-        top: 50%;
-        transform: translateY(-50%) rotate(180deg);
-        right: 100%;
+      main {
+        flex: 1 1 750px;
       }
     </style>
   </head>
   <body data-theme="typewriter">
-    <footer>
-      <label>
-        Theme
-        <select id="select-theme">
-          <option selected>typewriter</option>
-          <option>console</option>
-        </select>
-      </label>
-    </footer>
+    <main>
+      <slot />
+    </main>
     <aside>
       <nav>
+        <h4>Generators</h4>
         {
           Object.keys(categories).map((category) => (
-            <details open={Astro.url.pathname.startsWith("/generate/" + category)}>
+            <details
+              open={Astro.url.pathname.startsWith("/generate/" + category)}
+            >
               <summary>
                 <a href={"/generate/" + category}>{category}</a>
               </summary>
@@ -154,27 +69,5 @@ const categories = groupBy(generators, ({ id }) => id.split("/")[0]);
         }
       </nav>
     </aside>
-    <main style="grid-area:main;">
-      <slot />
-    </main>
-
-    <script>
-      function init() {
-        const saved = localStorage.getItem("theme") ?? "console";
-        if (saved) document.body.dataset.theme = saved;
-
-        const selector = document.querySelector("#select-theme");
-        if (!selector || !(selector instanceof HTMLSelectElement)) return;
-        selector.value = saved;
-        selector?.addEventListener("change", (event) => {
-          /** @ts-ignore **/
-          const theme = event.target.value;
-          document.body.dataset.theme = theme;
-          localStorage.setItem("theme", theme);
-        });
-      }
-
-      window.addEventListener("load", init);
-    </script>
   </body>
 </html>
