--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,38 @@
 ---
-import PageLayout from 'src/layouts/page.astro';
+import PageLayout from "src/layouts/page.astro";
 ---
 
 <PageLayout>
-	<h1>Astro</h1>
+    <h1>INTMATRIX.NET</h1>
+    <p>
+        A digitized random generator for <a
+            href="https://claymorerpgs.itch.io/fist"
+            >the FIST roleplaying game</a
+        >.
+    </p>
+
+    <h3>Instructions</h3>
+    <p>
+        Categories listed along the left side of the page will let you roll to
+        create a character or detail for your FIST game. Refreshing the page
+        will generate a new random result. You can click on the category again
+        to generate a new result, or use the number controls at the top of each
+        page to change the number of results.
+    </p>
+    <p>
+        Some results contain links to other generators or resources. For ease of
+        use, these links open in a new tab so you can easily return to your
+        previous results.
+    </p>
+    <p>
+        Much of the contents of these generators come from the FIST rulebook.
+        Buy the book! It's fun!
+    </p>
+    <p>
+        If you have any questions, comments, or suggestions, please feel free
+        get in touch via the <a
+            href="https://github.com/DevonCash/intelligence-matrix"
+            >github repository</a
+        >.
+    </p>
 </PageLayout>
