--- a/src/layouts/page.astro
+++ b/src/layouts/page.astro
@@ -9,65 +9,83 @@ const categories = groupBy(generators, ({ id }) => id.split("/")[0]);
 ---
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title ?? "intelligence matrix"}</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        display: flex;
-        flex-direction: row-reverse;
-        gap: 1rem;
-        padding: 1rem;
-      }
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <title>{title ?? "intelligence matrix"}</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
+            rel="stylesheet"
+        />
+        <style>
+            body {
+                display: flex;
+                align-items: stretch;
+                flex-direction: row-reverse;
+                gap: 1rem;
+                padding: 1rem;
+            }
 
-      @media screen and (max-width: 800px) {
-        body {
-          display: block;
-        }
-        main {
-          flex: 1 1 auto;
-        }
-      }
+            @media screen and (max-width: 800px) {
+                body {
+                    display: block;
+                }
+                main {
+                    flex: 1 1 auto;
+                }
+            }
 
-      main {
-        flex: 1 1 750px;
-      }
-    </style>
-  </head>
-  <body data-theme="typewriter">
-    <main>
-      <slot />
-    </main>
-    <aside>
-      <nav>
-        <h4>Generators</h4>
-        {
-          Object.keys(categories).map((category) => (
-            <details
-              open={Astro.url.pathname.startsWith("/generate/" + category)}
-            >
-              <summary>
-                <a href={"/generate/" + category}>{category}</a>
-              </summary>
-              <ul>
-                {categories[category].map(({ id, data }) => (
-                  <li>
-                    <a href={"/generate/" + id}>{data.plural}</a>
-                  </li>
-                ))}
-              </ul>
-            </details>
-          ))
-        }
-      </nav>
-    </aside>
-  </body>
+            main {
+                flex: 1 1 750px;
+            }
+
+            aside {
+                flex: 0 1 250px;
+            }
+        </style>
+    </head>
+    <body data-theme="typewriter">
+        <main>
+            <slot />
+        </main>
+        <aside>
+            <nav>
+                <h4>Generators</h4>
+                <ul>
+                    <li><a href="/">home</a></li>
+                    {
+                        Object.keys(categories).map((category) => (
+                            <li>
+                                <details
+                                    open={Astro.url.pathname.startsWith(
+                                        "/generate/" + category,
+                                    )}
+                                >
+                                    <summary>
+                                        <a href={"/generate/" + category}>
+                                            {category}
+                                        </a>
+                                    </summary>
+                                    <ul>
+                                        {categories[category].map(
+                                            ({ id, data }) => (
+                                                <li>
+                                                    <a href={"/generate/" + id}>
+                                                        {data.plural}
+                                                    </a>
+                                                </li>
+                                            ),
+                                        )}
+                                    </ul>
+                                </details>
+                            </li>
+                        ))
+                    }
+                </ul>
+            </nav>
+        </aside>
+    </body>
 </html>
